# etf_fastapi

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/gti_api/: main.py
src/gti_api/api/v1/: etf.py
src/gti_api/services/: etf_service.py
src/n8n_fastapi/: dependencies.py  main.py
src/n8n_fastapi/api/v1/: etf.py
src/n8n_fastapi/controllers/: etf_controller.py
src/n8n_fastapi/routes/: etf_routes.py
src/n8n_fastapi/services/: etf_service.py
src/n8n_fastapi/utils/: get_file_date.py
