[project]
name = "n8n-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alanyu", email = "squid78313@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "playwright>=1.51.0",
]

[project.scripts]
start = "n8n_fastapi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
