[project]
name = "gti_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alanyu", email = "squid78313@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "playwright>=1.51.0",
    "polars>=1.27.1",
]

[project.scripts]
start = "gti_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
